# CounselOfAgents

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  Makefile  NEXTSTEPS.md  README.md  agent.py  agent_registry.py  config.py  docker-compose.cuda.yml  docker-compose.yml  llm.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  setup.py  shell.py  task_classifier.py  task_graph.py  workspace.py
counsel/: __init__.py  agent.py  config.py  jobs.py  llm.py  logging.py  models.py  orchestrator.py  shell.py  task_graph.py  verification.py  workspace.py
projects/: .gitkeep
tests/: __init__.py  test_basic.py
